[build-system]
requires = ["setuptools==75.1.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phy-pipeline"
version = "0.1.0"
description = "PHYBench Pipeline - AI-powered physics problem processing pipeline"
readme = "README.md"
authors = [{name = "PHYBench Team", email = "contact@phybench.com"}]
keywords = ["physics", "ai", "education", "nlp", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "openai==1.51.2",
    "litellm==1.48.14",
    "sentence-transformers==3.1.1",
    "opencv-python==4.10.0.84",
    "Pillow==10.4.0",
    "imagehash==4.3.1",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "requests==2.32.3",
    "markdownify==0.13.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "pydantic==2.9.2",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.1",
    "rich==13.8.1",
    "typer==0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
]

[project.urls]
Homepage = "https://github.com/StephenQSstarThomas/phy-pipeline"
Repository = "https://github.com/StephenQSstarThomas/phy-pipeline.git"
Issues = "https://github.com/StephenQSstarThomas/phy-pipeline/issues"

[project.scripts]
phy-pipeline = "phy_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["phy_pipeline"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]